assets/style.css
body {
  font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;
  font-size: 16px;

  --theme-color: rgb(179, 27, 27);
  --faded-color: #777;
  --mid-color: rgba(175, 184, 193, 0.2);
  --mono-font:
    ui-monospace, SF Mono, "Anonymous Pro", Inconsolata, Consolas,
    "Source Code Pro", Menlo, Monaco, monospace;
  --mono-size: 13.5px;
}

/* Dark mode. */
@media (prefers-color-scheme: dark) {
  body {
    background: black;
    color: white;
    --theme-color: rgb(218, 60, 63);
  }
}

main {
  margin: 0 auto;
  max-width: 50rem;
}

p,
ul,
ol {
  line-height: 1.7;
}

h1 {
  margin: 0.3rem 0;
}

a:link {
  color: var(--theme-color);
  text-decoration-thickness: 2%;
}
a:visited {
  color: var(--theme-color);
}

pre,
code {
  font-family: var(--mono-font);
  font-size: var(--mono-size);
}
code {
  background: var(--mid-color);
}
pre code {
  display: block;
  border-radius: 3px;

  /* "Margin bleed" for the background. */
  padding: 8px;
  margin-left: -8px;
  margin-right: -8px;

  /* Make <pre> code scroll horizontally when it's too wide. */
  overflow-x: auto;
  word-wrap: normal;
  white-space: pre;
}

nav {
  text-transform: uppercase;
  font-size: 80%;
  display: flex;

  .details {
    margin-right: auto;
    display: flex;
    align-items: center;
    gap: 1em;

    * {
      display: inline-block;
    }
  }

  .links {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap: 1em;

    a:link,
    a:visited {
      display: inline-block;
      margin-left: 1em;
      padding: 0.5em;

      background: var(--theme-color);
      color: white;
      text-decoration: none;
      font-weight: bold;
    }

    a:hover {
      background: black;
    }
  }
}

.abstract {
  p:nth-child(1) {
    margin-top: 0;
  }

  &.missing {
    padding: 1em;
    background: var(--mid-color);
    font-style: italic;
  }
}

.authors {
  list-style: none;
  padding-left: 0;
  li {
    display: inline;
    margin-right: 1em;
  }
}

.label {
  display: block;
  margin: 1rem 0 0 0;
  font-size: 80%;
  text-transform: uppercase;
  margin-right: 1rem;
  color: var(--faded-color);
}

.version {
  color: var(--faded-color);
  display: inline-block;
  margin-left: 1em;
  font-weight: normal;
}

.edition {
  font-weight: bold;
  background-image: linear-gradient(
    to left,
    lch(31 60 28.1),
    lch(47.1 66.6 88.2),
    lch(21.4 20.2 90.4),
    lch(51.7 46.3 187),
    lch(60.8 39 283),
    lch(1.41 34.3 294)
  );
  color: transparent;
  background-clip: text;
}

@media (prefers-color-scheme: dark) {
  .edition {
    background-image: linear-gradient(
      to left,
      lch(77 60 28.1),
      lch(99.5 53.1 93.1),
      lch(84.9 32.2 94.4),
      lch(100 46.3 190),
      lch(97.8 39.9 286),
      lch(62.8 30.6 284)
    );
  }
}

